...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.ChallengeListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/challenge_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/empty_lists_animation"
        app:lottie_repeatMode="restart"
        app:lottie_speed="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/challenge_list_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/challenge_list_no_challenges"
        android:textAlignment="center"
        android:textColor="@color/grey"
...
