...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/home_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/challenge_list_edt_hint"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/home_fetch_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_fetch_btn"
        android:layout_width="0dp"
...
