...
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        tools:context=".ui.details.ChallengeDetailsFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/challenge_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/challenge_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
...
